--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   flutter_svg: ^2.0.9
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,7 @@ flutter:
 
   assets:
      - assets/images/imageluffy1.jpg
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
