--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.16.0
   flutter_svg: ^2.0.9
   cloud_firestore: ^4.14.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
